--- a/mainnet/2025-07-13-budget-2025/EMI/EMI-0004-25-builder-dao/EMI-0004-25.jsonld.md
+++ b/mainnet/2025-07-13-budget-2025/EMI/EMI-0004-25-builder-dao/EMI-0004-25.jsonld.md
@@ -1,26 +1,16 @@
 # Title
 
-Withdraw ₳6,000,000 for Cardano Summit 2025 and regional tech events
+Withdraw ₳12,000,000 for Cardano Builder DAO administered by Intersect
 
 # Abstract
 
-This treasury withdrawal funds **Cardano Summit 2025 and regional tech events** which will provide the following services:
+This treasury withdrawal funds **Cardano Builder DAO** which will provide the following services:
 
-The Cardano Summit 2025 is a strategic initiative, spearheaded by the Cardano Foundation and fortified by regional ecosystem partners (EMURGO, Rare Evo, Wada, Catalyst Africa Town Hall, Ada Solar), to accelerate the global adoption of Cardano technology. Each partner will command the execution of a regionally focused Cardano Summit Event. While each maintains regional autonomy, all six entities will synergize in the events' development. The core ethos and driving benefits of the Cardano Summit are:
+The Cardano Builder DAO (**CB DAO**) is a **smart contract-enforced**, **member-governed funding mechanism** created to **support the application-layer growth of the Cardano ecosystem**. Its core purpose is to **provide sustainable financial backing** and **strategic oversight to high-impact projects** that are directly responsible for existing user adoption, on-chain activity, Total Value Locked (TVL), and ecosystem engagement.
 
-- Simplify developer onboarding through targeted Cardano Dev Days events globally.
+While Cardano's governance structure and funding mechanisms, such as Project Catalyst and core development committees, have been instrumental in bootstrapping protocol advancements and open-source tooling, **there remains a substantial gap in ongoing support for live, user-facing products/services. CB DAO fills that gap.**
 
-- Drive adoption through targeted education for first-time and novice users, unlocking Cardano's potential for all.
-
-- Showcase tangible impact of real-world use cases, capturing mainstream attention and demonstrating Cardano's value.
-
-- Forge powerful collaborations between developers, entrepreneurs, users, enterprises and regulators.
-
-- Strategize and solve scaling and interoperability challenges, securing future scalability.
-
-- Attract capital, talent, and media, securing vital resources for the growth of Cardano as a leading L1.
-
-- Ignite innovation & celebrate success: Rally the community, celebrate achievements, and build unstoppable momentum.
+Through a **transparent governance framework**, **strict accountability mechanisms**, and a **metrics-first funding approach**, CB DAO ensures that builders with growing products on mainnet can scale sustainably, integrate cutting-edge Cardano infrastructure (e.g. Hydra, Leios, Midgard), and contribute to the ecosystem's long-term growth.
 
 This Treasury Withdrawal is submitted by Intersect on behalf of the vendor. The following sections; Abstract, Motivation, Rationale and Vendor Profile have been sourced from the approved proposal submitted by the Vendor as part of the Intersect budget process.
 
@@ -30,58 +20,41 @@ This treasury withdrawal funds one of 39 proposals to give effect to the approve
 
 This proposal aims to solve the following problem:
 
-The Cardano Summit is not optional; it's the indispensable catalyst to empower developers, unify infrastructure efforts and implement governance, forge global connections, plus attract capital, talent and media, propelling Cardano to its rightful place as a leader in the decentralized future.
+This proposal seeks to address the lack of dedicated, sustainable financial support and strategic oversight for functioning dApps that drive real usage, transaction volume, and Total Value Locked (TVL) on the Cardano blockchain.
 
-Adoption Stagnation: Without a central platform showcasing real-world utility, enterprise and mainstream adoption remains critically low.
+While Cardano has mechanisms for new protocol development and early-stage funding, there is currently no infrastructure specifically designed to financially support application-layer projects that are already live on mainnet and which are driving Cardano's current user activity. Without targeted support, these projects risk stagnation, limiting Cardano's broader adoption and on-chain ecosystem growth.
 
-Developer Isolation and Fake News: The narrative that "building on Cardano is hard" persists due to inadequate educational resources and targeted support, hindering developer onboarding, slowing application and infrastructure growth.
-
-Infrastructure Fragmentation: Scaling and interoperability challenges persist without a collaborative platform for unified solutions. Collaboration between developers, entrepreneurs, users, enterprises, regulatory bodies and other L1/L2 ecosystems need further strengthening to foster a cohesive and impactful ecosystem.
-
-Community Siloing: Missed networking and knowledge exchange opportunities between developers, entrepreneurs, users, enterprises, and regulatory bodies limit the creation of strategic global partnerships.
-
-Capital, Talent, and Media Acquisition Deficit: The challenge of effectively attracting and securing sufficient capital, top-tier talent, and widespread media attention hinders Cardano's growth and its ability to solidify its position as a leading Layer 1 blockchain platform.
+To reach mass adoption, Cardano needs to better support launched projects; this proposal aims to ensure that established builders with launched dApps can continue to build on Cardano.
 
 # Rationale
 
 ### Project Solution
 
-The Cardano Summit proposal aims to provide:
+If implemented, this proposal will directly benefit Cardano dApp developers, the broader ecosystem of users, and ADA holders by creating a reliable funding structure focused on sustained adoption, utility, and on-chain economic activity.
 
-1 x Flagship Cardano Summit: Europe (November 2025)
+Demonstrated value to the Cardano Community includes:
 
-4 x Regional Cardano Tech Events
-Las Vegas, USA (August 2025)
-Africa (September 2025)
-LATAM (October 2025)
-Bangalore, India (December 2025)
+* **Increased On-Chain Activity**: Providing financial support to launched projects with real users and measurable transactions will grow Cardano's usage metrics, a key indicator of network health and success.
 
-Cardano Summit Awards & Battle of the Builders
-Included within the Flagship Cardano Summit
+* **Higher TVL and Ecosystem Stickiness**: By supporting projects that retain user assets on-chain, the DAO boosts Cardano's DeFi footprint and TVL.
 
-Dev Days/Hackathons
-Integrated into each of the four Regional Tech Events
+* **More Reliable Infrastructure & Products**: Developers gain access to capital that enables consistent product development, user support, and innovation.
 
-Specific KPIs
-Attendee targets (500-800 attendees per event)
-Speaker targets (20-100 speakers per event)
-Session targets (8-20 sessions per event).
+* **Greater Visibility and Adoption**: Supporting high-impact applications increases Cardano's competitiveness in the broader Web3 landscape, attracting new users and developers.
 
-Supporting information: [https://ucarecdn.com/f4055c0d-2123-49f1-8d6b-7db3ed1187a5/CardanoSummit2025IntersectProposal.pdf](https://ucarecdn.com/f4055c0d-2123-49f1-8d6b-7db3ed1187a5/CardanoSummit2025IntersectProposal.pdf)
+* **Transparent ROI Tracking**: Funded projects must report KPIs like transaction counts, active users, and commit activity, enabling the community to clearly measure the impact and return on funding decisions.
+
+* **Balance Ecosystem Funding Structure**: This purpose-built funding mechanism complements Project Catalyst by creating a clear delineation between the different development stages of projects, and where they should seek funding within the ecosystem. This enables Project Catalyst to be a more effective innovation engine as larger projects will not rely on Project Catalyst for funding.
 
 ### Vendor Profile
 
-The Cardano Summit 2025 will leverage the collective strength and deep regional expertise of its co-hosts, ensuring unparalleled impact and engagement across the globe.
+Our team is responsible for building and maintaining Clarity, a governance platform purpose-built for the Cardano ecosystem. Clarity serves as the user-facing interface for interacting with Agora, an open-source, audited library of smart contracts designed for decentralized governance and treasury management.
 
-The Cardano Foundation's proven delivery of three consecutive, globally impactful Cardano Summits establishes their invaluable institutional and enterprise knowledge and a track record of high-quality, large-scale event execution.
+We have already deployed this infrastructure in production and actively maintain it. Our smart contracts have governed over \$10 million in Total Value Locked (TVL) and are used by four DAOs, each managing six-figure treasuries on-chain. These DAOs use the same tooling and processes that CB DAO will leverage, including member-based voting, proposal submission, temperature checks, and treasury execution fully enforced by smart contracts.
 
-EMURGO's extensive experience in fostering blockchain adoption through strategic events, including TOKEN2049, positions them as a key driver of regional engagement and impact.
+In addition to our technical capabilities, we work directly with Cardano ecosystem founders and project teams on a regular basis. Many of these projects are already live on mainnet, and several have expressed intent to participate in CB DAO as members during the initial cohort. This gives us a direct line of communication with the builder community and allows us to ensure early DAO membership includes high-quality, committed teams aligned with CB DAO's mission and KPIs.
 
-Rare Evo demonstrated expertise in curating highly engaging and community-centric blockchain events, like Rare Evo, ensures a dynamic and impactful experience for attendees.
-
-WADA's established presence and deep connections within the Cardano community in Africa, coupled with their successful track record of organizing CLEs, guarantees strong local engagement and relevance.
-
-ADA Solar's unique understanding of the regional landscape and their proven ability to activate local communities, exemplified by Cardano Constitutional Convention and Cardano Tech Week, will be instrumental in maximizing the summit's reach and impact in LATAM.
+Our team's combination of hands-on DAO implementation, infrastructure development, and builder community engagement positions us uniquely to lead the operational launch and ongoing management of the Cardano Builder DAO.
 
 ### Contract Management
 
@@ -147,10 +120,14 @@ The subsections; Contract Management, Project Delivery, and Budget Management To
 
 # References
 
-- [Cardano Summit 2025 Proposal (PDF)](ipfs://bafybeihjwyaqmfyo6dhlto4so45pxjhu3oo6otmfw5rvfpwowquoingkce)
-- [Additional Details: Regional Events (PDF)](ipfs://bafybeigzvqd65ch6bq6gg76bi2eohdlt2arhj522tqcv3on52z6j7fgkdu)
-- [Cardano Summit Regional Events KPIs Sheet (PDF)](ipfs://bafkreiakvxcktw5v6s2gpbiz4cxhcrfump5gt5ddzzbmh73wiev3vnkupq)
-- [Project Proposal In Ekklesia](https://2025budget.intersectmbo.org/ballots/680d1b63565577986442d123/proposals/680d1b63565577986442d14c)
+- [Cardano Builder DAO dRep Application](https://docs.google.com/document/d/1ADZZYmdwoO6vCI5rP5hzuMExkkD2S3iFyV9ZLBPoknY/edit?usp=sharing)
+- [Cardano Builder DAO Website](https://buildingoncardano.io/)
+- [Cardano Builder DAO Charter](https://docs.google.com/document/d/1-0_pdoJI9OdSbhqmnOyu4OOae_1K6ls5YVkk7mTS5Js/edit?tab=t.0#heading=h.eyz91siyp4k6)
+- [Cardano Builder DAO Blog Post](https://medium.com/@Clarity_/introducing-cardano-builder-dao-3a8993a51854)
+- [DAO Smart Contracts Github Repository](https://github.com/Liqwid-Labs/agora)
+- [Cardano Builder DAO Overview Deck](https://docs.google.com/presentation/d/1OJa0V54YKl9Ny9HioMCaKVdDLBxkQjhvkpxsR-KaGM8/edit?usp=sharing)
+- [Cardano Builder DAO Governance Portal](https://www.clarity.vote/)
+- [Project Proposal In Ekklesia](https://2025budget.intersectmbo.org/ballots/680d1b63565577986442d123/proposals/680d1b63565577986442d150)
 - [Approved Budget Info Action submitted by Intersect via GovTool](https://gov.tools/outcomes/governance_actions/e14de8d9dc4f4ddf3fe9250a8a926e20f10e99b86bd0610b77d7a054981591ee#0)
 - [Details of all successful proposals (CSV)](ipfs://bafybeicwrop4q7xvnyjdd5drumbe56sqtm5lbe2ul3c262zt4hgguzdycm)
 - [Automating Accountability: Cardano's Smart Contract Framework Blog](ipfs://bafybeihqx4ae72z7suqfnxrpqpqithp43cai7o2uuewnqtezgaoyc3ptyq)
