--- a/mainnet/2025-07-13-budget-2025/EMI/EMI-0006-25-flow-desk/EMI-0006-25.jsonld.md
+++ b/mainnet/2025-07-13-budget-2025/EMI/EMI-0006-25-flow-desk/EMI-0006-25.jsonld.md
@@ -98,11 +98,11 @@ Notes:
 
 Partnerships already signed with major partners in the Cardano ecosystem:
 
-- Nov 14th 2024 Snek MMAAS: [[https://x.com/CardanoFeed/status/1857081807109243353](https://x.com/CardanoFeed/status/1857081807109243353)]{.mark}
+- [Nov 14th 2024 Snek MMAAS](https://x.com/CardanoFeed/status/1857081807109243353)
 
-- Dec 9th 2024 Iagon MMAAS: [[https://x.com/IagonOfficial/status/1866147717564539258](https://x.com/IagonOfficial/status/1866147717564539258)]{.mark}
+- [Dec 9th 2024 Iagon MMAAS](https://x.com/IagonOfficial/status/1866147717564539258)
 
-- Dec 14th 2024 DexHunter partnership: [[https://x.com/DexHunterIO/status/1867923226468233595](https://x.com/DexHunterIO/status/1867923226468233595)]{.mark}
+- [Dec 14th 2024 DexHunter partnership](https://x.com/DexHunterIO/status/1867923226468233595)
 
 ### Contract Management
 
@@ -176,8 +176,8 @@ The subsections; Contract Management, Project Delivery, and Budget Management To
 - [Details of all successful proposals (CSV)](ipfs://bafybeicwrop4q7xvnyjdd5drumbe56sqtm5lbe2ul3c262zt4hgguzdycm)
 - [Automating Accountability: Cardano's Smart Contract Framework Blog](ipfs://bafybeihqx4ae72z7suqfnxrpqpqithp43cai7o2uuewnqtezgaoyc3ptyq)
 - [Sundae Labs Budget Management Smart Contracts Github Repository](https://github.com/SundaeSwap-finance/treasury-contracts)
-- [Budget Management Smart Contracts TxPipe Audit Report](ipfs://bafybeiccnwejbgj43wo6hrlseckkkmprtoqc5cfuy2hesm6c6yealwho3e)
-- [Budget Management Smart Contracts MLabs Audit Report](ipfs://bafybeiah5fnjhda5hemj3qvaehc4mre3qllqzw2l7mkdsguytn4ftgafw4)
+- [Budget Management Smart Contracts TxPipe Audit Report](ipfs://)
+- [Budget Management Smart Contracts MLabs Audit Report](ipfs://)
 
 # Authors
 
