--- a/mainnet/2025-07-13-budget-2025/EMI/EMI-0008-25-RWA/EMI-0008-25.jsonld.md
+++ b/mainnet/2025-07-13-budget-2025/EMI/EMI-0008-25-RWA/EMI-0008-25.jsonld.md
@@ -1,14 +1,14 @@
 # Title
 
-Withdraw ₳6,000,000 for Unveiling the First Unified Global Events Marketing S...
+Withdraw ₳3,000,000 for High-yield RWA Asset for Cardano: Tokenized Real Estate
 
 # Abstract
 
-This treasury withdrawal funds **Unveiling the First Unified Global Events Marketing Strategy for Cardano** which will provide the following services:
+This treasury withdrawal funds **High-yield RWA Asset for Cardano : Tokenized Real Estate** which will provide the following services:
 
-Revitalize Cardano's global presence and foster ecosystem growth, we aim to host and participate in a dynamic series of events in 2025 and 2026.
+Haus is building an open-source Tokenized Home Equity Liquidity Protocol to unlock the \$16 trillion in illiquid home equity sitting in U.S. residential real estate. By leveraging blockchain technology, our platform enables homeowners to sell fractional ownership of their home equity, instantly accessing liquidity while allowing investors to gain exposure to real estate appreciation.
 
-These events will target diverse audiences, including developers, enterprises, blockchain enthusiasts, and policymakers, to drive engagement, innovation, and adoption.
+We have already prototyped and deployed this model on a private Ethereum blockchain, securing \$20 million in Total Value Locked (TVL). With this proposal, we aim to transition HausCoin and the liquidity protocol to Cardano, leveraging its secure, scalable, and cost-effective infrastructure to power a decentralized marketplace for home equity trading.
 
 This Treasury Withdrawal is submitted by Intersect on behalf of the vendor. The following sections; Abstract, Motivation, Rationale and Vendor Profile have been sourced from the approved proposal submitted by the Vendor as part of the Intersect budget process.
 
@@ -18,35 +18,93 @@ This treasury withdrawal funds one of 39 proposals to give effect to the approve
 
 This proposal aims to solve the following problem:
 
-The Cardano ecosystem currently faces challenges in establishing a consistent and impactful presence at global blockchain events. Catalyst-funded initiatives often operate under independent branding which rarely mentions 'Cardano' which dilutes the visibility of Cardano within the broader blockchain community. This fragmented approach makes it harder for Cardano to stand out amidst the competition.
-
-Competitors like Solana, Aptos, and Sui have established significant brand recognition by strategically aligning global events with developer-focused initiatives.
-
-Their series of hacker houses and hubs---typically held 3--4 times per year---have successfully fostered active developer communities and increased Total Value Locked (TVL) on their platforms. These events seamlessly blend ecosystems, attracting talent and partnerships across multiple chains while solidifying their reputation as innovative blockchain leaders.
-
-Without a similarly coordinated and impactful event strategy, Cardano risks being overshadowed in a competitive landscape. A fresh approach to event planning is essential to position Cardano alongside top players and attract developers, partners, and enthusiasts from across the blockchain ecosystem.
+Many homeowners are asset-rich but cash-poor, lacking access to liquidity tied up in their homes. At the same time, investors struggle to find stable, appreciating, asset-backed alternatives to traditional stablecoins or volatile crypto assets.
 
 # Rationale
 
 ### Project Solution
 
-Unveiling the First Unified Global Events Marketing Strategy for Cardano. The entities will deliver 'Cardano' branded sponsorships at global conferences in 2025 and 2026, managed and planned by the events management experts.
+\### Tokenizing Home Equity on Cardano:
 
-Cardano as an L1 needs to be promoted as the brand at these events with no biased 3rd party business objectives hovering around it. They will run a 100% Cardano-focused events and marketing campaign globally at the most cost-efficient manner leveraging our wealth of event experience.
+- Haus will move its existing liquidity protocol onto Cardano's mainnet, allowing homeowners to tokenize and sell portions of their home equity directly to investors.
 
-List of Key Events: [https://ucarecdn.com/601623d5-e9ef-45ec-9025-1e7cd40f824c/External2025EventsListCleanlist_14April.pdf](https://ucarecdn.com/601623d5-e9ef-45ec-9025-1e7cd40f824c/External2025EventsListCleanlist_14April.pdf)
+- This will create an efficient and scalable real estate-backed asset class, providing homeowners with cash liquidity and investors with a share in home appreciation.
 
-Unveiling the First Unified Global Events Marketing Strategy for Cardano PDF:
+\### Launching HausCoin on Cardano:
 
-[https://ucarecdn.com/0830cd4a-dec8-4595-8a27-2a680788e90d/Cardano2025EventProposalUpdatedMarch.pdf](https://ucarecdn.com/0830cd4a-dec8-4595-8a27-2a680788e90d/Cardano2025EventProposalUpdatedMarch.pdf)
+- Haus will issue HausCoin, a real estate-backed token enabling home equity trading at scale.
+
+- Investors will be able to buy, sell, and trade tokenized real estate assets, unlocking new DeFi use cases for real-world assets (RWAs).
+
+\### Leveraging an Existing 30,000-User Waitlist (\$4.1B in TVL):
+
+- Haus already has a 30,000-person waitlist representing \$4.1 billion in Total Home Equity Value (TVL).
+
+- A fraction of this TVL will be onboarded to Cardano, driving real-world adoption of the protocol.
+
+\### Building a Legal Framework for Compliance:
+
+- Haus will develop a regulatory-compliant framework for issuing and trading tokenized real estate in the U.S., EU and international markets.
+
+- Legal and financial structuring will ensure seamless integration with traditional real estate markets.
+
+\### Deploying Liquidity Pools & Market Infrastructure:
+
+- Haus will establish liquidity pools to facilitate instant trading and lending of home equity tokens.
+
+- This will support DeFi integration, enabling real estate-backed lending, yield farming, and staking mechanisms.
+
+\### Product Completion & Market Expansion:
+
+- Funding will be used to finalize product development, enhance the user experience, and integrate with key blockchain ecosystems.
+
+- Haus will drive market adoption through strategic partnerships, marketing, and investor outreach.
 
 ### Vendor Profile
 
-Cardano Foundation: An independent, Swiss-based non-profit organization tasked with advancing the public digital infrastructure of Cardano and working to anchor it as a utility for financial and social systems
+\## Relevant Experience & Track Record
 
-Emurgo: EMURGO is a blockchain technology company and a founding entity of the Cardano blockchain that provides products and services to drive the adoption of Cardano's Web3 ecosystem. Established in Japan, EMURGO exists to facilitate commercial growth of the Cardano ecosystem and unlock the full potential of the ecosystem through partnerships, investments, education, and infrastructure development.
+Haus is led by a seasoned team of experts in blockchain, fintech, real estate, and technology, with a proven track record of scaling businesses, executing blockchain projects, and driving financial innovation.
 
-Rare Network: Rare Network is a premier event services, KOL (Key Opinion Leader), and marketing company dedicated to promoting businesses within the blockchain technology and Web3 space. As the parent group of RareEvo.io, Rare Network specializes in creating impactful events and innovative marketing strategies that drive visibility and growth for pioneering companies in the decentralized technology ecosystem
+\### 1. Leadership Team with Deep Industry Expertise
+
+**Siddarth (CEO)** -- A product and tech executive with \$1B+ P&L and 20+ years as a real estate investor.
+
+- Turned around a \$2B public company leading to a \$6.4B private equity exit through product and engineering innovation.
+
+- Built a \$500M revenue AI platform at Amazon.
+
+- Scaled (NYSE: PL) from \$2M to \$140M revenue, leading strategic acquisitions including Google's Terra Bella in a \$2.8B exit.
+
+- Launched Microsoft Surface 3 (\$0 to \$475M revenue) and developed the first Android phone at Google.
+
+**Rakesh Pullabhatla (COO)** -- A financial and operations expert, blockchain specialist, and fintech/proptech strategist.
+
+- COO/CFO Consultant at multiple Layer 1 blockchain projects (Nodle, Astar, Oasis, Metallicus) and several DeFi and NFT ventures.
+
+- Director at Planet Labs (NYSE: PL) -- Led company expansion from 30 to 650 employees, growing revenue from \$0 to \$150M ARR, leading to a \$2.8B IPO
+
+- Director at Boku (AIM: BOKU) -- Helped build a global mobile payments platform in 120+ countries, leading to a \$500M IPO
+
+- Former Economics Consultant at Cornerstone Research and held product & operational roles at Apple, Textron, and Fortune 150 companies.
+
+\### 2. Proven Execution & Market Validation
+
+- Developed and tested the Haus Liquidity Protocol, completing 36 tokenized home transactions with \$20M in TVL.
+
+- Strong Product-Market Fit, validated by a 30,000-user waitlist with \$4.1B in tokenizable home equity.
+
+- Early DeFi Partnerships, including promising conversations with MinSwap and other liquidity providers.
+
+\### 3. Real Estate, Blockchain, and Legal Readiness
+
+- Haus is already operational, with \$25M+ AUM, \$20M TVL, and \$150K ARR, proving its financial viability.
+
+- Regulatory compliance focus, with an ongoing legal framework for HausCoin (SEC reg D approved) and tokenized real estate investing.
+
+- Institutional & Investor Network, ensuring liquidity, adoption, and long-term sustainability.
+
+With a track record of scaling multi-billion-dollar businesses, building blockchain protocols, and executing real estate tokenization, the Haus team is well-positioned to deliver this project successfully on Cardano.
 
 ### Contract Management
 
@@ -112,9 +170,11 @@ The subsections; Contract Management, Project Delivery, and Budget Management To
 
 # References
 
-- [Unified Global Events Marketing Strategy for Cardano (PDF)](ipfs://bafybeiem32fufh2xuznlsdsxc7nybutbv4352iqu22mzt5amdvxjsh6cbm)
-- [List of Proposed Events & Budget (PDF)](ipfs://bafkreihbmieixckirag2bb7sfqhfjpmbp4ygdujokiyphx4yus644k4nte)
-- [Project Proposal In Ekklesia](https://2025budget.intersectmbo.org/ballots/680d1b63565577986442d123/proposals/680d1b63565577986442d222)
+- [HausCoin - Private Ethereum Ledger (To be moved to Cardano)](https://hauscoin.com/ledger)
+- [Customer Testimonials](https://haus.com/testimonials)
+- [Why Cardano for Haus](https://docsend.com/view/fp5xjfasirpciwpv)
+- [Haus Deck](https://docsend.com/view/fvx4c39gyzfk3vpt)
+- [Project Proposal In Ekklesia](https://2025budget.intersectmbo.org/ballots/680d1b63565577986442d123/proposals/680d1b63565577986442d186)
 - [Approved Budget Info Action submitted by Intersect via GovTool](https://gov.tools/outcomes/governance_actions/e14de8d9dc4f4ddf3fe9250a8a926e20f10e99b86bd0610b77d7a054981591ee#0)
 - [Details of all successful proposals (CSV)](ipfs://bafybeicwrop4q7xvnyjdd5drumbe56sqtm5lbe2ul3c262zt4hgguzdycm)
 - [Automating Accountability: Cardano's Smart Contract Framework Blog](ipfs://bafybeihqx4ae72z7suqfnxrpqpqithp43cai7o2uuewnqtezgaoyc3ptyq)
