--- a/mainnet/2025-07-13-budget-2025/EMI/EMI-0007-25-pavilions/EMI-0007-25.jsonld.md
+++ b/mainnet/2025-07-13-budget-2025/EMI/EMI-0007-25-pavilions/EMI-0007-25.jsonld.md
@@ -1,52 +1,38 @@
 # Title
 
-Withdraw ₳6,000,000 for Unveiling the First Unified Global Events Marketing S...
+Withdraw ₳889,500 for Cardano Ecosystem Pavilions at Exhibitions
 
 # Abstract
 
-This treasury withdrawal funds **Unveiling the First Unified Global Events Marketing Strategy for Cardano** which will provide the following services:
+This treasury withdrawal funds **Cardano Ecosystem Pavilions at Exhibitions** which will provide the following services:
 
-Revitalize Cardano's global presence and foster ecosystem growth, we aim to host and participate in a dynamic series of events in 2025 and 2026.
-
-These events will target diverse audiences, including developers, enterprises, blockchain enthusiasts, and policymakers, to drive engagement, innovation, and adoption.
+We propose to host Ecosystem Pavilions at numerous Exhibitions around the world. The funding will ensure that projects are able to have access to much more affordable prices to have a presence at the event. Non of the spots or travel budgets will be 100% funded. We will also be ensuring that projects that sign up understand the importance of pre event work, during the event work and follow up work to achieve the best possible ROI. The aim is that it will give projects a more affordable entry and education into how to truly make the most of exhibitions and marketing.
 
 This Treasury Withdrawal is submitted by Intersect on behalf of the vendor. The following sections; Abstract, Motivation, Rationale and Vendor Profile have been sourced from the approved proposal submitted by the Vendor as part of the Intersect budget process.
 
 This treasury withdrawal funds one of 39 proposals to give effect to the approved budget info action for ₳275,269,340, administered by Intersect via gov_action1u9x73kwufaxa70lfy59g4ynwyrcsaxdcd0gxzzmh67s9fxq4j8hqqk2phgh. The information provided herein is intended to fulfill the spirit of the constitutional requirement for a treasury withdrawal info action by also providing the details of the proposed solution, alignment to the budget, and amount to be withdrawn from the Cardano Treasury.
 
+Note: This withdrawal request has been reduced on request by the Vendor to avoid overlapping with other proposals being considered by the Cardano community - reduced from the Budget Info Action approved ₳1,119,333 to ₳889,500 .
+
 # Motivation
 
 This proposal aims to solve the following problem:
 
-The Cardano ecosystem currently faces challenges in establishing a consistent and impactful presence at global blockchain events. Catalyst-funded initiatives often operate under independent branding which rarely mentions 'Cardano' which dilutes the visibility of Cardano within the broader blockchain community. This fragmented approach makes it harder for Cardano to stand out amidst the competition.
-
-Competitors like Solana, Aptos, and Sui have established significant brand recognition by strategically aligning global events with developer-focused initiatives.
-
-Their series of hacker houses and hubs---typically held 3--4 times per year---have successfully fostered active developer communities and increased Total Value Locked (TVL) on their platforms. These events seamlessly blend ecosystems, attracting talent and partnerships across multiple chains while solidifying their reputation as innovative blockchain leaders.
-
-Without a similarly coordinated and impactful event strategy, Cardano risks being overshadowed in a competitive landscape. A fresh approach to event planning is essential to position Cardano alongside top players and attract developers, partners, and enthusiasts from across the blockchain ecosystem.
+There is a genuine need to get more of a Cardano presence at Exhibitions around the world, but the costs are prohibitive for many projects currently. Although everyone knows of "Cardano", they know very little, if anything about what has and is being built here or how to build here. We also need to attract more people to the ecosystem, whether its investors, developers or users. Exhibitions are often a key part of all of these audiences' decision making when choosing where to base themselves.
 
 # Rationale
 
 ### Project Solution
 
-Unveiling the First Unified Global Events Marketing Strategy for Cardano. The entities will deliver 'Cardano' branded sponsorships at global conferences in 2025 and 2026, managed and planned by the events management experts.
+The funds will provide a partial subsidy to projects so they can afford to be present at exhibitions that will benefit them. Part of the funding will enable us to be able to provide support to the projects to ensure they get the most out of the event.
 
-Cardano as an L1 needs to be promoted as the brand at these events with no biased 3rd party business objectives hovering around it. They will run a 100% Cardano-focused events and marketing campaign globally at the most cost-efficient manner leveraging our wealth of event experience.
-
-List of Key Events: [https://ucarecdn.com/601623d5-e9ef-45ec-9025-1e7cd40f824c/External2025EventsListCleanlist_14April.pdf](https://ucarecdn.com/601623d5-e9ef-45ec-9025-1e7cd40f824c/External2025EventsListCleanlist_14April.pdf)
-
-Unveiling the First Unified Global Events Marketing Strategy for Cardano PDF:
-
-[https://ucarecdn.com/0830cd4a-dec8-4595-8a27-2a680788e90d/Cardano2025EventProposalUpdatedMarch.pdf](https://ucarecdn.com/0830cd4a-dec8-4595-8a27-2a680788e90d/Cardano2025EventProposalUpdatedMarch.pdf)
+The Pavilions need to be paid for as far in advance as possible to ensure the best price and position is achieved. So the majority of the funds will need to be released upon successful application confirmation. But from a milestone point of view, the vendor will be providing proof that the event took place, along with follow up calls and KPI gathering.
 
 ### Vendor Profile
 
-Cardano Foundation: An independent, Swiss-based non-profit organization tasked with advancing the public digital infrastructure of Cardano and working to anchor it as a utility for financial and social systems
+Supplyoneers FZ-LLC's proposer has 15 years experience at over 75 exhibitions and conferences around the world in various industries. They have also in the past benefited from Industry and Government Grant subsidy schemes for such activities.Supplyoneers FZ-LLC are employing the best fit here into the proposal for where they currently are as a young and developing ecosystem with very little marketing support to date.
 
-Emurgo: EMURGO is a blockchain technology company and a founding entity of the Cardano blockchain that provides products and services to drive the adoption of Cardano's Web3 ecosystem. Established in Japan, EMURGO exists to facilitate commercial growth of the Cardano ecosystem and unlock the full potential of the ecosystem through partnerships, investments, education, and infrastructure development.
-
-Rare Network: Rare Network is a premier event services, KOL (Key Opinion Leader), and marketing company dedicated to promoting businesses within the blockchain technology and Web3 space. As the parent group of RareEvo.io, Rare Network specializes in creating impactful events and innovative marketing strategies that drive visibility and growth for pioneering companies in the decentralized technology ecosystem
+Supplyoneers FZ-LLC have previously had a largely self funded booth at a crypto event in 2023 as well as a satellite event at DIFC to the Cardano Summit where we gave 14 projects the opportunity to present themselves on stage in front of TradFi innovation teams like HSBC/Standard chartered and others.
 
 ### Contract Management
 
@@ -112,9 +98,9 @@ The subsections; Contract Management, Project Delivery, and Budget Management To
 
 # References
 
-- [Unified Global Events Marketing Strategy for Cardano (PDF)](ipfs://bafybeiem32fufh2xuznlsdsxc7nybutbv4352iqu22mzt5amdvxjsh6cbm)
-- [List of Proposed Events & Budget (PDF)](ipfs://bafkreihbmieixckirag2bb7sfqhfjpmbp4ygdujokiyphx4yus644k4nte)
-- [Project Proposal In Ekklesia](https://2025budget.intersectmbo.org/ballots/680d1b63565577986442d123/proposals/680d1b63565577986442d222)
+- [Marketing Budget Proposal](https://discovercardano.com/marketing-budget-proposal)
+- [The Community Reaction to Proposal](https://x.com/invalid_eutxo/status/1908166826095194154)
+- [Project Proposal In Ekklesia](https://2025budget.intersectmbo.org/ballots/680d1b63565577986442d123/proposals/680d1b63565577986442d25c)
 - [Approved Budget Info Action submitted by Intersect via GovTool](https://gov.tools/outcomes/governance_actions/e14de8d9dc4f4ddf3fe9250a8a926e20f10e99b86bd0610b77d7a054981591ee#0)
 - [Details of all successful proposals (CSV)](ipfs://bafybeicwrop4q7xvnyjdd5drumbe56sqtm5lbe2ul3c262zt4hgguzdycm)
 - [Automating Accountability: Cardano's Smart Contract Framework Blog](ipfs://bafybeihqx4ae72z7suqfnxrpqpqithp43cai7o2uuewnqtezgaoyc3ptyq)
