--- a/mainnet/2025-07-13-budget-2025/EMI/EMI-0005-25-scoios/EMI-0005-25.jsonld.md
+++ b/mainnet/2025-07-13-budget-2025/EMI/EMI-0005-25-scoios/EMI-0005-25.jsonld.md
@@ -1,6 +1,6 @@
 # Title
 
-Withdraw ₳1,500,000 for Complement Catalyst: Extended Quadratic Funding---Zero Op...
+Withdraw ₳1,500,000 for Complement Catalyst: Extended Quadratic Funding---Zer...
 
 # Abstract
 
