fix weirdness on mlabs research

--- a/mainnet/2025-07-13-budget-2025/ER/ER-0005-25-mlabs-research/ER-0005-25.jsonld.md
+++ b/mainnet/2025-07-13-budget-2025/ER/ER-0005-25-mlabs-research/ER-0005-25.jsonld.md
@@ -30,7 +30,7 @@ This treasury withdrawal funds one of 39 proposals to give effect to the approve
 
 This proposal aims to solve the following problem:
 
-Cardano currently lacks reusable and composable on-chain cryptographic tooling for elliptic curves and finite fields. Developers building ZK or privacy-preserving applications must either hardcode specific cryptographic primitives (limiting generality) or implement complex curve logic themselves (introducing security risks and inefficiencies). There is no widely accepted, verifiable standard for parameterized zero-knowledge verification on Cardano***.***
+Cardano currently lacks reusable and composable on-chain cryptographic tooling for elliptic curves and finite fields. Developers building ZK or privacy-preserving applications must either hardcode specific cryptographic primitives (limiting generality) or implement complex curve logic themselves (introducing security risks and inefficiencies). There is no widely accepted, verifiable standard for parameterized zero-knowledge verification on Cardano.
 
 # Rationale
 
